# workflow-test

./: .coverage  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/app/: hello.py
tests/: test_hello.py
