[project]
name = "workflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pyright>=1.1.393",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 88
lint.ignore = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["workflow-test"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"